# Aim-Vision

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile
aimvision-backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  railway.json
aimvision-backend/alembic/: env.py
aimvision-backend/alembic/versions/: 0001_federation_first_schema.py  0002_audit_log.py  0003_rls_policies.py  0004_federation_schema_v2.py  0005_active_learning_queue.py  0006_recording_source_kind.py  0007_recording_session_clock_offset.py  0008_camera_calibrations.py  0009_shots_unique_session_seq.py  0010_shot_events_unique.py  0011_session_partial_flag.py  0012_drills.py  0013_coaching_notes.py  0014_erasure.py  0015_users_gotrue_sub.py
aimvision-backend/app/: __init__.py  config.py  db.py  deps.py  main.py
aimvision-backend/app/data/: __init__.py  drills.py
aimvision-backend/app/middleware/: __init__.py  audit.py  tenant_context.py
aimvision-backend/app/models/: __init__.py  active_learning.py  annotation.py  audit.py  base.py  camera_calibration.py  coaching_note.py  consent.py  drill.py  erasure.py  session.py  tenancy.py
aimvision-backend/app/routers/: __init__.py  active_learning.py  athletes.py  auth.py  cohorts.py  consent.py  drills.py  erasure.py  federation.py  health.py  orgs.py  session.py
aimvision-backend/app/schemas/: __init__.py  active_learning.py  athletes.py  audit.py  camera_calibration.py  coaching_note.py  cohorts.py  consent.py  drills.py  erasure.py  federation.py  orgs.py  progress.py  session.py  tenancy.py
aimvision-backend/app/services/: __init__.py  audit.py  auth.py  auth_gotrue.py  authz.py  crypto_shred.py  drills.py  erasure.py  ingest_client.py  longitudinal.py  storage.py  tenancy.py  workflows.py
aimvision-backend/app/workflows/: __init__.py  process_session.py
aimvision-backend/app/workflows/activities/: __init__.py  post_session.py
aimvision-backend/scripts/: boot.sh  seed_dev.py  smoke_gotrue_exchange.sh
aimvision-backend/scripts/dev/: init_dual_db.sql
aimvision-backend/tests/: conftest.py  test_active_learning.py  test_athlete_progress.py  test_athletes_endpoints.py  test_audit_chain.py  test_auth_gotrue_exchange.py  test_auth_gotrue_verifier.py  test_auth_login.py  test_authz.py  test_calibration_health_endpoint.py  test_camera_calibration_endpoint.py  test_coaching_note_endpoint.py  test_cohorts_endpoint.py  test_crypto_shred.py  test_drills_endpoint.py  test_erasure.py  test_federation_dashboard.py  test_federation_schema_v2.py  test_health.py  test_ingest_client.py  test_orgs_endpoint.py  test_process_session_trigger.py  test_recording_alignment.py  test_recording_get.py  test_recording_upload.py  test_session_create.py  test_session_end.py  test_session_summary.py  test_shot_event_ingest.py  test_shot_ingest.py  test_tenancy_isolation.py  test_workflow_process_session.py
aimvision-camera-core/: Cargo.toml  README.md  clippy.toml
aimvision-camera-core/.cargo/: config.toml
aimvision-camera-core/crates/aimvision-camera-mock/: Cargo.toml
aimvision-camera-core/crates/aimvision-camera-mock/fixtures/: flaky_wifi.yaml  sample_session.yaml  thermal_throttle.yaml
aimvision-camera-core/crates/aimvision-camera-mock/src/: clock.rs  fault_script.rs  lib.rs  mock_camera.rs
aimvision-camera-core/crates/aimvision-camera-mock/tests/: fault_injection.rs  multi_camera_sync.rs  playback.rs
aimvision-camera-core/crates/aimvision-camera-phone/: Cargo.toml
aimvision-camera-core/crates/aimvision-camera-phone-jni/: Cargo.toml
aimvision-camera-core/crates/aimvision-camera-phone-jni/src/: lib.rs
aimvision-camera-core/crates/aimvision-camera-phone/include/: aimvision_camera_phone.h
aimvision-camera-core/crates/aimvision-camera-phone/src/: ffi.rs  lib.rs  phone_camera.rs
aimvision-camera-core/crates/aimvision-camera-state/: Cargo.toml
aimvision-camera-core/crates/aimvision-camera-state/src/: command_queue.rs  lib.rs  state_machine.rs
aimvision-camera-core/crates/aimvision-camera-state/tests/: command_queue.rs  state_transitions.rs
aimvision-camera-core/crates/aimvision-camera-traits/: Cargo.toml
aimvision-camera-core/crates/aimvision-camera-traits/src/: capabilities.rs  control.rs  error.rs  events.rs  lib.rs  media.rs  state.rs  time_source.rs  transport.rs
aimvision-ml/: .gitignore  Makefile  README.md  pyproject.toml
aimvision-ml/configs/diagnostic_head/: base.yaml
aimvision-ml/configs/rtmpose_lite/: mobile.yaml
aimvision-ml/configs/videomae_pretrain/: v1.yaml
aimvision-ml/src/aimvision_ml/: __init__.py  __main__.py  schemas.py  taxonomy.py
aimvision-ml/src/aimvision_ml/data/: __init__.py  exclusion_list.py  provenance.py
aimvision-ml/src/aimvision_ml/eval/: __init__.py  audio_detection_eval.py  diagnostic_eval.py  gates.py  metrics.py  pose_eval.py  stratify.py  synth_audio.py  synth_pose.py
aimvision-ml/src/aimvision_ml/export/: __init__.py  coreml_convert.py  onnx_diagnostic.py  onnx_rtmpose.py
aimvision-ml/src/aimvision_ml/inference/: __init__.py  audio_shot.py  audio_xcorr.py  barrel.py  calibration.py  camera_calibration.py  charuco_detect.py  diagnostic.py  diagnostic_onnx.py  pipeline.py  pose.py
aimvision-ml/src/aimvision_ml/ingest/: __init__.py  backend_client.py  cli.py  post_session.py
aimvision-ml/src/aimvision_ml/llm/: __init__.py  client.py  generate.py  pii.py  prompt.py  schema.py  verifier.py
aimvision-ml/src/aimvision_ml/registry/: __init__.py  mlflow_client.py  shadow_routing.py
aimvision-ml/src/aimvision_ml/training/: losses.py  (+8 more)
aimvision-ml/tests/: test_audio_shot_detector.py  test_audio_xcorr.py  test_calibration_temperature.py  test_camera_calibration.py  test_charuco_detect.py  test_diagnostic_eval.py  test_diagnostic_onnx.py  test_exclusion_list.py  test_gates.py  test_ingest_backend_client.py  test_ingest_cli.py  test_llm_client.py  test_llm_generate.py  test_llm_pii.py  test_llm_schema.py  test_metrics.py  test_pose_eval.py  test_post_session_orchestration.py  test_provenance.py  test_stratify.py  test_taxonomy.py
(+264 files in other folders)
