[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aimvision-ml"
version = "0.1.0"
description = "AIMVISION ML — training, evaluation, ONNX export, and model registry."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AIMVISION AI Engineering" }]

# Always-installed (lightweight) dependencies. Heavy frameworks (torch, mmpose,
# mmengine, mmcv, onnxruntime, openmim, coremltools) are gated behind extras
# so CI can run unit tests on a CPU-only image.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "mlflow>=2.11",
    "click>=8.1",
    "rich>=13.7",
    # Async HTTP client for the backend ingest path. Used by
    # `aimvision_ml.ingest.backend_client` to POST/PATCH against the
    # FastAPI service. Already a backend dep; lightweight.
    "httpx>=0.28",
]

[project.optional-dependencies]
# Inference runtime: ONNX export validation, on-CPU integration smoke tests.
# CI installs this. Lightweight (no GPU images required).
# `onnx` is the graph-authoring lib (distinct from the `onnxruntime`
# executor): the diagnostic-head export path emits ONNX graphs, and the
# inference tests author tiny graphs without pulling in torch.
infer = [
    "onnxruntime>=1.17",
    "onnx>=1.16",
]
# OpenCV — for ChArUco / ArUco detection in the camera-calibration
# pipeline (multi-camera-sync-spec.md §4). `opencv-python-headless`
# avoids the GUI subsystem deps that the regular `opencv-python` wheel
# pulls in (X11, GTK), which is exactly what we want in a CI image.
# This extra is opt-in; the default ML container stays slim and the
# pure-numpy bundle-adjustment scaffold from PR #51 continues to work
# without it. Install with `uv sync --extra vision`.
vision = [
    "opencv-python-headless>=4.10",
]
# Lint, type, test. CI installs this.
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.1",
    "pytest-cov>=5.0",
    # Required by tests/test_ingest_backend_client.py — the new
    # ingest client is async-only, and pytest-asyncio in auto-mode
    # discovers `async def test_*` without per-test decorators.
    "pytest-asyncio>=0.24",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.21",
]

# PEP 735 dependency-groups for the heavy stacks. The `train` group
# carries torch + torchvision + openmim; the OpenMMLab stack
# (mmpose, mmengine, mmcv) is installed AFTER `uv sync --group train` via:
#
#     uv run mim install "mmengine>=0.10" "mmcv>=2.1" "mmpose>=1.3"
#
# OpenMMLab packages ship sdists that don't declare their build-time deps
# (mmcv → pkg_resources, mmpose → chumpy → pip); openmim pre-resolves the
# correct platform wheels and is the OpenMMLab-recommended install path.
[dependency-groups]
train = [
    "torch>=2.2",
    "torchvision>=0.17",
    "openmim>=0.3",
]
coreml = [
    "coremltools>=7.2",
]

[project.scripts]
aimvision-ml = "aimvision_ml.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aimvision_ml"]


[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "TID",  # tidy-imports
]
ignore = [
    "E501",  # line length is enforced by formatter, not lint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
# Heavy optional deps may not be installed in CI.
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "mmpose.*",
    "mmengine.*",
    "mmcv.*",
    "onnxruntime.*",
    "coremltools.*",
    "mlflow.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
