[package]
name = "aimvision-camera-mock"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Fixture-driven mock camera implementation for AIMVISION CI."

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
aimvision-camera-traits = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
