[package]
name = "aimvision-camera-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Connection state machine + single-in-flight command queue for the AIMVISION camera-core."

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
aimvision-camera-traits = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
aimvision-camera-mock = { workspace = true }
tokio = { workspace = true }
